--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://unpkg.com/@staticcms/app@^4.0.0/dist/main.css" />
   </head>
   <body>
+    <script>
+      if (location.hostname === 'cftutoring.com') {
+        location.replace(location.href.replace('https://cftutoring.com', 'https://www.cftutoring.com'));
+      }
+    </script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
   </body>
